--- a/index.html
+++ b/index.html
@@ -528,8 +528,8 @@
 
 					<div class="overlay-content">
 						<span class="mt-4 d-block">Graphic Design</span>
-						<h4 class="mb-4">Ati Ali</h4>
-						<p>Atif is a Good working experience in web development</p>
+						<h4 class="mb-4">Mr. Shakeel</h4>
+						<p>Mr. Shakeel is a Good working experience in web development</p>
 
 						<ul class="list-inline">
 							<li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
