--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					 	Hello! <br>
 	                    <span class="cd-words-wrapper text-color">
 	                        <b class="is-visible"> I Am </b>
-	                        <b>Mubashir Hameed</b>
+	                        <b>Mubashir</b>
 	                    </span>
 	                </h1>
 					<p class="font-weight-normal lead mt-3 mb-4">Hello and welcome to our profile. We're a small team of a passionate young programmer and artist, eager to work with you!
