--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="remus,business,company,agency,multipurpose,modern,bootstrap4">
   
   <meta name="author" content="Dreambuzz">
-
+<meta name="google-site-verification" content="Mia9v4qBZnxdeFqO9PUUUTgJ0jQju8_DFTq8nxi9PSA" />
   <title>Mubashir- Creative portfolio</title>
 
   <!-- Mobile Specific Meta-->
